feat: fix major version of packages

--- a/package.json
+++ b/package.json
@@ -23,22 +23,22 @@
   },
   "dependencies": {
     "@nuxt/eslint-config": "^0.1.1",
-    "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
-    "eslint-config-next": "latest",
-    "eslint-import-resolver-typescript": "latest",
-    "eslint-plugin-document-write": "latest",
-    "eslint-plugin-editorconfig": "latest",
+    "@typescript-eslint/eslint-plugin": "^7.10.0",
+    "@typescript-eslint/parser": "^7.10.0",
+    "eslint-config-next": "^14.2.3",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-document-write": "^1.0.1",
+    "eslint-plugin-editorconfig": "^4.0.3",
     "eslint-plugin-import-x": "^0.5.0",
-    "eslint-plugin-jsdoc": "latest",
-    "eslint-plugin-jsonc": "latest",
+    "eslint-plugin-jsdoc": "^48.2.5",
+    "eslint-plugin-jsonc": "^2.15.1",
     "eslint-plugin-n": "^17.7.0",
-    "eslint-plugin-promise": "latest",
-    "eslint-plugin-react": "latest",
-    "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-svelte": "^2.39.0",
     "eslint-plugin-vitest": "^0.5.4",
-    "eslint-plugin-vue": "latest"
+    "eslint-plugin-vue": "^9.26.0"
   },
   "devDependencies": {
     "@phanect/utils": "^1.0.0",
