--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   },
   "dependencies": {
     "@eslint/js": "^9.7.0",
-    "@nuxt/eslint-config": "^0.3.13",
     "eslint-config-next": "^14.2.3",
     "eslint-import-resolver-typescript": "^3.6.1",
+    "@nuxt/eslint-plugin": "^0.3.13",
     "eslint-plugin-document-write": "^1.0.1",
     "eslint-plugin-editorconfig": "^4.0.3",
     "eslint-plugin-import-x": "^3.0.1",
