--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@eslint/js": "^9.7.0",
     "@nuxt/eslint-config": "^0.3.13",
+    "@stylistic/eslint-plugin": "^2.6.1",
     "eslint-config-next": "^14.2.3",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-document-write": "^1.0.1",
