fix: put `types` before `default`
According to tsup, you have to put `types` before `default`, or the types are not recognized properly.

--- a/modules/eslint/package.json
+++ b/modules/eslint/package.json
@@ -8,8 +8,8 @@
   "exports": {
     ".": {
       "import": {
-        "default": "./dist/eslint.mjs",
-        "types": "./dist/eslint.d.ts"
+        "types": "./dist/eslint.d.ts",
+        "default": "./dist/eslint.mjs"
       }
     }
   },
