--- a/modules/eslint/package.json
+++ b/modules/eslint/package.json
@@ -3,18 +3,18 @@
   "version": "2024.8.7",
   "description": "Personal ESLint configuration for Jumpei Ogawa (@phanect)",
   "type": "module",
-  "module": "./dist/eslint.mjs",
+  "module": "./dist/eslint.js",
   "types": "./dist/eslint.d.ts",
   "exports": {
     ".": {
       "import": {
         "types": "./dist/eslint.d.ts",
-        "default": "./dist/eslint.mjs"
+        "default": "./dist/eslint.js"
       }
     }
   },
   "scripts": {
-    "build": "unbuild",
+    "build": "tsup",
     "test": "npm run build && vitest run",
     "lint": "tsc --noEmit && npm run build && eslint",
     "fix": "npm run build && eslint --fix",
@@ -50,8 +50,8 @@
     "@types/node": "^22.0.0",
     "deepmerge": "^4.3.1",
     "eslint": "^9.7.0",
+    "tsup": "^8.2.4",
     "typescript": "^5.3.3",
-    "unbuild": "v3.0.0-rc.7",
     "vitest": "^2.0.2"
   },
   "peerDependencies": {
