--- a/modules/eslint/package.json
+++ b/modules/eslint/package.json
@@ -23,6 +23,12 @@
         "types": "./dist/svelte.d.ts",
         "default": "./dist/svelte.js"
       }
+    },
+    "./astro": {
+      "import": {
+        "types": "./dist/astro.d.ts",
+        "default": "./dist/astro.js"
+      }
     }
   },
   "scripts": {
@@ -47,8 +53,10 @@
     "@eslint/js": "^9.7.0",
     "@nuxt/eslint-config": "^0.5.0",
     "@stylistic/eslint-plugin": "^2.6.1",
+    "eslint-plugin-astro": "^1.2.4",
     "eslint-plugin-jsdoc": "^50.2.2",
     "eslint-plugin-jsonc": "^2.15.1",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-n": "^17.7.0",
     "eslint-plugin-promise": "^7.0.0",
     "eslint-plugin-svelte": "^2.39.0",
