--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 #
 # Project-specific
 #
-dist/
-/tmp/
 /rwt.json
 
 #
@@ -10,7 +8,7 @@ dist/
 #
 
 # Logs
-logs
+logs/
 *.log
 
 # PIDs
@@ -19,30 +17,62 @@ logs
 *.pid.lock
 pids
 
-# Archives
-*.tgz
-
 # File manager configs
 .directory
 Thumbs.db
+.DS_Store
+
+#
+# Generic
+#
+dist/
+tmp/
+
+# dotenv
+.env
+.env.*
+!.env.example
 
 #
 # JavaScript
 #
-.npm/
+
+# Package managers
 node_modules/
-.eslintcache
-.node_repl_history
+.npm/
 .yarn-integrity
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Lock files: Always install latest ESLint/TSLint and related packages
+# Output of `npm pack`
+*.tgz
+
+# Lockfiles are not required for npm packages
 npm-shrinkwrap.json
 package-lock.json
 yarn.lock
+pnpm-lock.yaml
+bun.lockb
+
+# Node.js
+.node_repl_history
+
+# TypeScript
+*.tsbuildinfo
 
 # Frameworks
+.next/
+out/
 .nuxt/
 .output/
+.svelte-kit/
+.astro/
+
+# Platforms
+.wrangler/
+.vercel/
+.netlify/
+
+# ESLint
+.eslintcache
