--- a/examples/nuxt/tsconfig.json
+++ b/examples/nuxt/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "extends": [
     "./.nuxt/tsconfig.json",
     "@phanect/configs/tsconfig/frontend",
