--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
   "extends": "@phanect/configs/tsconfig/nodejs",
   "files": [ "modules/eslint/package.json" ], // Required for scripts/rwt.ts
   "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.mts" ],
