chore: import from eslint-config-phanective instead of built js
By this commit, eslint.config.js can be type-checked by TypeScript because it no longer refer to files under dist/

--- a/examples/nuxt/tsconfig.json
+++ b/examples/nuxt/tsconfig.json
@@ -4,8 +4,5 @@
     "./.nuxt/tsconfig.json",
     "@phanect/configs/tsconfig/frontend",
   ],
-  "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.vue" ],
-  "exclude": [
-    "eslint.config.js",
-  ],
+  "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.vue" ]
 }
