--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^22.0.0",
     "deepmerge": "^4.3.1",
     "eslint": "^9.7.0",
+    "eslint-config-phanective": "2024.8.7",
     "esno": "^4.7.0",
     "typescript": "^5.3.3"
   },
