chore: do not include *.mts in tsconfig

--- a/examples/nuxt/tsconfig.json
+++ b/examples/nuxt/tsconfig.json
@@ -4,7 +4,7 @@
     "./.nuxt/tsconfig.json",
     "@phanect/configs/tsconfig/frontend",
   ],
-  "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.mts", "**/*.vue" ],
+  "include": [ "**/*.js", "**/*.mjs", "**/*.ts", "**/*.vue" ],
   "exclude": [
     "eslint.config.js",
   ],
