fix: add missing node_modules/@types/ to typeRoots

--- a/modules/eslint/tsconfig.json
+++ b/modules/eslint/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "typeRoots": [
+      "../../node_modules/@types/",
       "./src/types/"
     ]
   },
