chore: do not run ESLint again in modules/eslint/
The files are linted by `npm run lint` in the project root.

--- a/modules/eslint/package.json
+++ b/modules/eslint/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "build": "tsup",
     "test": "vitest run",
-    "lint": "tsc --noEmit && eslint && : example-eslint",
+    "lint": "tsc --noEmit && : example-eslint",
     "rwt": "esno ./scripts/rwt.ts",
     "clean": "git clean -dX --force",
     "release": "npm publish . --access public"
