--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^9.7.0",
     "eslint-config-phanective": "2024.8.7",
     "esno": "^4.7.0",
+    "tsup": "^8.3.0",
     "typescript": "^5.3.3"
   },
   "engines": {
