--- a/modules/configs/tsconfig.json
+++ b/modules/configs/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "typeRoots": [
       "../../node_modules/@types/",
-      "./src/types/"
+      "./src/eslint/types/"
     ]
   },
   "include": [ "**/*.js", "**/*.mjs", "**/*.ts" ],
