--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
 
       - run: npm install
       # You don't have to run `npm run build` because
-      # `npm test` and `npm run lint` runs `npm run build` before test and lint.
+      # `npm run lint` runs `npm run build` before test and lint.
       - run: npm test
       - name: npm run lint
         run: cp ./rwt.example.json ./rwt.json && npm run lint
