--- a/modules/eslint/package.json
+++ b/modules/eslint/package.json
@@ -33,11 +33,11 @@
   },
   "scripts": {
     "build": "tsup",
-    "test": "npm run build && vitest run",
+    "test": "vitest run",
     "lint": "tsc --noEmit && eslint && : example-eslint",
     "rwt": "esno ./scripts/rwt.ts",
     "clean": "git clean -dX --force",
-    "release": "npm run build && npm publish . --access public"
+    "release": "npm publish . --access public"
   },
   "repository": {
     "type": "git",
