refactor: rearrange directory structure of eslint-config
- src/configs/defaults.ts → src/eslint.ts
- src/configs/components/*.ts → src/configs/*.ts

--- a/modules/eslint/package.json
+++ b/modules/eslint/package.json
@@ -8,8 +8,8 @@
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/defaults.d.ts",
-        "default": "./dist/defaults.js"
+        "types": "./dist/eslint.d.ts",
+        "default": "./dist/eslint.js"
       }
     }
   },
