test: create separated packages for frameworks

--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -12,6 +12,7 @@
     "@astrojs/check": "^0.9.3",
     "@phanect/configs": "latest",
     "eslint-config-phanective": "2024.8.7",
+    "@phanect/lint-astro": "2024.8.7",
     "typescript": "^5.5.4"
   },
   "engines": {
