--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@phanect/configs": "latest",
+    "@phanect/lint-vue": "2024.8.7",
     "@types/node": "^22.1.0",
     "eslint": "^9.8.0",
     "eslint-config-phanective": "2024.8.7"
