--- a/modules/lint/package.json
+++ b/modules/lint/package.json
@@ -22,7 +22,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:phanect/eslint-config-phanective.git"
+    "url": "git@github.com:phanect/misc.git"
   },
   "author": "Jumpei Ogawa (https://phanective.org)",
   "license": "CC0-1.0",
