--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -11,6 +11,7 @@
     "vue": "^3.4.35"
   },
   "devDependencies": {
+    "@phanect/configs": "latest",
     "@types/node": "^22.1.0",
     "eslint": "^9.8.0",
     "eslint-config-phanective": "2024.8.7"
