test: rename `eslint-config-phanective` to `@phanect/lint`

--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -12,9 +12,9 @@
   },
   "devDependencies": {
     "@phanect/configs": "latest",
+    "@phanect/lint": "2024.8.7",
     "@phanect/lint-vue": "2024.8.7",
     "@types/node": "^22.1.0",
-    "eslint": "^9.8.0",
-    "eslint-config-phanective": "2024.8.7"
+    "eslint": "^9.8.0"
   }
 }
