--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "@astrojs/check": "^0.9.3",
     "@phanect/configs": "latest",
-    "eslint-config-phanective": "2024.8.7",
+    "@phanect/lint": "2024.8.7",
     "@phanect/lint-astro": "2024.8.7",
     "typescript": "^5.5.4"
   },
