--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -7,8 +7,8 @@
   },
   "devDependencies": {
     "@phanect/configs": "latest",
+    "@phanect/lint": "2024.8.7",
     "eslint": "^9.8.0",
-    "eslint-config-phanective": "2024.8.7",
     "vitest": "^2.1.0"
   },
   "engines": {
