feat(tsconfig): let cloudflare config extend frontend config

--- a/modules/configs/configs/tsconfig/tsconfig.cloudflare.json
+++ b/modules/configs/configs/tsconfig/tsconfig.cloudflare.json
@@ -1,7 +1,6 @@
 {
-  "extends": "./tsconfig.base.json",
+  "extends": "./tsconfig.frontend.json",
   "compilerOptions": {
-    "declaration": false,
     "types": [ "@cloudflare/workers-types" ]
   }
 }
