fix: use `files` prop to include files into the npm packages
.npmignore does not work.
I guess it is caused by .gitignore in the project root.

--- a/modules/configs/package.json
+++ b/modules/configs/package.json
@@ -13,6 +13,10 @@
   },
   "license": "CC0-1.0",
   "type": "module",
+  "files": [
+    "./configs",
+    "./README.md"
+  ],
   "exports": {
     "./ts/cloudflare": "./configs/ts/tsconfig.cloudflare.json",
     "./ts/frontend": "./configs/ts/tsconfig.frontend.json",
