--- a/modules/lint-svelte/package.json
+++ b/modules/lint-svelte/package.json
@@ -9,6 +9,10 @@
     "url": "git@github.com:phanect/misc.git"
   },
   "type": "module",
+  "files": [
+    "./dist",
+    "./README.md"
+  ],
   "main": "./dist/svelte.js",
   "module": "./dist/svelte.js",
   "types": "./dist/svelte.d.ts",
