--- a/modules/lint/package.json
+++ b/modules/lint/package.json
@@ -3,6 +3,10 @@
   "version": "2024.8.7",
   "description": "Personal ESLint configuration for Jumpei Ogawa (@phanect)",
   "type": "module",
+  "files": [
+    "./dist",
+    "./README.md"
+  ],
   "main": "./dist/eslint.js",
   "module": "./dist/eslint.js",
   "types": "./dist/eslint.d.ts",
