--- a/modules/lint-react/package.json
+++ b/modules/lint-react/package.json
@@ -6,7 +6,7 @@
   "license": "CC0-1.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:phanect/misc.git"
+    "url": "git+ssh://git@github.com/phanect/misc.git"
   },
   "type": "module",
   "files": [
