--- a/modules/lint/package.json
+++ b/modules/lint/package.json
@@ -25,7 +25,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:phanect/misc.git"
+    "url": "git+ssh://git@github.com/phanect/misc.git"
   },
   "author": "Jumpei Ogawa (https://phanective.org)",
   "license": "CC0-1.0",
