--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@phanect/misc",
+  "version": "0.0.0",
   "description": "Monorepo for @phanect's personal configs, templates, and other miscellaneous modules for development",
   "author": "Jumpei Ogawa (https://phanective.org)",
   "license": "CC0-1.0",
   "repository": {
     "type": "git",
-    "url": "git@github.com:phanect/misc.git"
+    "url": "git+ssh://git@github.com/phanect/misc.git"
   },
   "private": true,
   "type": "module",
