chore(eslint): temporarily disable publishing `lint-react` until it's ready to release

--- a/modules/lint-react/package.json
+++ b/modules/lint-react/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "@phanect/lint-react",
   "version": "2024.8.7",
   "description": "@phanect's personal ESLint config for React & Next.js projects",
