--- a/modules/lint-astro/package.json
+++ b/modules/lint-astro/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.0"
   },
   "devDependencies": {
+    "@phanect/configs": "2024.9.23",
     "@types/node": "^22.0.0",
     "eslint": "^9.7.0",
     "tsup": "^8.2.4",
