--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,7 +12,7 @@ on:
       - published
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -28,14 +28,27 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - run: npm install
+      - run: npm test
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js v22
+        uses: actions/setup-node@v4
+        with:
+          node-version: 22
+
+      - run: npm install
       # You don't have to run `npm run build` because
       # `npm run lint` runs `npm run build` before test and lint.
-      - run: npm test
       - name: npm run lint
         run: npm run lint
 
   publish:
-    needs: build
+    needs:
+      - test
+      - lint
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
     steps:
