--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@phanect/configs": "2024.10.2",
     "@phanect/lint": "2024.10.2",
     "@phanect/utils": "^1.0.0",
+    "@types/eslint-plugin-jsx-a11y": "^6.9.0",
     "@types/node": "^22.0.0",
     "eslint": "^9.7.0",
     "esno": "^4.7.0",
