ci: add missing permissions for `npm publish --province`

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -51,6 +51,10 @@ jobs:
       - lint
     if: github.event_name == 'release'
     runs-on: ubuntu-latest
+    # Required for npm publish --province
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
