ci: replace `npm publish` options with `publishConfig` in package.json

--- a/modules/configs/package.json
+++ b/modules/configs/package.json
@@ -63,5 +63,9 @@
   "engines": {
     "node": ">=18.x",
     "npm": ">=10"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
