--- a/modules/lint-react/package.json
+++ b/modules/lint-react/package.json
@@ -45,5 +45,9 @@
   "engines": {
     "node": ">=18.x",
     "npm": ">=10.x"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
