--- a/modules/lint/package.json
+++ b/modules/lint/package.json
@@ -68,5 +68,9 @@
     "typescript": {
       "optional": true
     }
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
