--- a/modules/lint-svelte/package.json
+++ b/modules/lint-svelte/package.json
@@ -42,5 +42,9 @@
   "engines": {
     "node": ">=18.x",
     "npm": ">=10.x"
+  },
+  "publishConfig": {
+    "access": "public",
+    "provenance": true
   }
 }
