chore: support Node.js LTSes & v22+

--- a/examples/nodejs/package.json
+++ b/examples/nodejs/package.json
@@ -13,7 +13,7 @@
     "vitest": "^2.1.0"
   },
   "engines": {
-    "node": "20.x || >=22.x",
+    "node": "18.x || 20.x || >=22.x",
     "npm": ">=10.x"
   }
 }
