--- a/examples/nuxt/package.json
+++ b/examples/nuxt/package.json
@@ -18,5 +18,9 @@
     "@types/node": "^22.1.0",
     "eslint": "^9.8.0",
     "vue-tsc": "^2.1.6"
+  },
+  "engines": {
+    "node": "18.x || 20.x || >=22.x",
+    "npm": ">=10.x"
   }
 }
