--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "typescript": "^5.3.3"
   },
   "engines": {
-    "node": "20.x || >=22.x",
+    "node": "18.x || 20.x || >=22.x",
     "npm": ">=10.x"
   }
 }
