--- a/examples/astro/package.json
+++ b/examples/astro/package.json
@@ -17,7 +17,7 @@
     "typescript": "^5.5.4"
   },
   "engines": {
-    "node": "20.x || >=22.x",
+    "node": "18.x || 20.x || >=22.x",
     "npm": ">=10.x"
   }
 }
