--- a/modules/configs/package.json
+++ b/modules/configs/package.json
@@ -61,7 +61,7 @@
     }
   },
   "engines": {
-    "node": ">=18.x",
+    "node": "18.x || 20.x || >=22.x",
     "npm": ">=10"
   },
   "publishConfig": {
