--- a/modules/lint-svelte/package.json
+++ b/modules/lint-svelte/package.json
@@ -40,7 +40,7 @@
     }
   },
   "engines": {
-    "node": ">=18.x",
+    "node": "18.x || 20.x || >=22.x",
     "npm": ">=10.x"
   },
   "publishConfig": {
