--- a/modules/lint-vue/package.json
+++ b/modules/lint-vue/package.json
@@ -35,7 +35,7 @@
     "eslint": "^9.7.0"
   },
   "engines": {
-    "node": ">=18.x",
+    "node": "18.x || 20.x || >=22.x",
     "npm": ">=10.x"
   },
   "publishConfig": {
