--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,7 @@ on:
 
 jobs:
   test:
+    name: test (Node.js v${{ matrix.node-version }})
     runs-on: ubuntu-latest
     strategy:
       matrix:
