fix(lint-react): add missing build script

--- a/modules/lint-react/package.json
+++ b/modules/lint-react/package.json
@@ -17,7 +17,7 @@
   "module": "./dist/react.js",
   "types": "./dist/react.d.ts",
   "scripts": {
-    "build": ":",
+    "build": "tsup",
     "lint": "tsc --noEmit && : lint-react"
   },
   "dependencies": {
