--- a/modules/lint-react/package.json
+++ b/modules/lint-react/package.json
@@ -21,7 +21,7 @@
     "lint": "tsc --noEmit && : lint-react"
   },
   "dependencies": {
-    "eslint-config-next": "^14.2.12",
+    "@next/eslint-plugin-next": "^14.2.12",
     "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2"
