--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "private": true,
   "type": "module",
   "workspaces": [
-    "modules/*",
+    "workspaces/*",
     "examples/*"
   ],
   "scripts": {
