--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 # Project-specific
 #
 
-# READMEs copied from modules/lint/README.md to include in the npm package
-/modules/*/README.md
+# READMEs copied from workspaces/lint/README.md to include in the npm package
+/workspaces/*/README.md
 
 #
 # System
