--- a/workspaces/lint/package.json
+++ b/workspaces/lint/package.json
@@ -4,6 +4,7 @@
   "description": "Personal ESLint configuration for Jumpei Ogawa (@phanect)",
   "author": "Jumpei Ogawa (https://phanective.org)",
   "license": "CC0-1.0",
+  "homepage": "https://github.com/phanect/misc",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/phanect/misc.git"
