fix(tsconfig): add missing `esnext` to `lib`
It is not inherited from base.

--- a/workspaces/configs/configs/ts/tsconfig.frontend.json
+++ b/workspaces/configs/configs/ts/tsconfig.frontend.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "declaration": false,
     "moduleResolution": "bundler",
-    "lib": [ "dom" ]
+    "lib": [ "esnext", "dom" ]
   }
 }
